syntax = "proto3";
package userinfoservice;
option go_package = "github.com/ZhuoZhuoCrayon/wasm-demo/src/userinfoservice";

message PhoneNumber {
  string number = 1;
  PhoneType type = 2;
}


message GetUserInfoRequest {
  int32 user_id = 1;
}

message UserInfo {
  string openid = 1;
  int32 user_id = 2;
  string username = 3;
  string email = 4;
  repeated PhoneNumber phones = 5;
}

enum PhoneType {
  PHONE_TYPE_UNSPECIFIED = 0;
  PHONE_TYPE_MOBILE = 1;
  PHONE_TYPE_HOME = 2;
  PHONE_TYPE_WORK = 3;
}

service UserInfoService {
  rpc GetUserInfo(GetUserInfoRequest) returns (UserInfo);
}
